--- a/src/extension/chrome/manifest.json
+++ b/src/extension/chrome/manifest.json
@@ -11,5 +11,6 @@
     "permissions": [
         "<all_urls>",
         "tabs"
-    ]
+    ],
+    "web_accessible_resources" : ["content-script-injected.js"]
 }
