--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.2.0",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.3.13",
     "eslint": "^1.7.1",
     "eslint-config-airbnb": "^0.1.0",
@@ -31,6 +32,10 @@
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.6",
     "gulp-zip": "^3.0.2",
+    "material-ui": "^0.15.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-tap-event-plugin": "^1.0.0",
     "webpack": "^1.12.2"
   },
   "dependencies": {}
